--- a/PokerKata.csproj
+++ b/PokerKata.csproj
@@ -52,9 +52,11 @@
   <ItemGroup>
     <Compile Include="Card.cs" />
     <Compile Include="Hand.cs" />
-    <Compile Include="Enums.cs" />
+    <Compile Include="HandValue.cs" />
     <Compile Include="PokerKataTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rank.cs" />
+    <Compile Include="Suit.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="readme.txt" />
